# cljx

./: .gitignore  Cargo.toml  README.md  mycode.clj
.github/: copilot-instructions.md
crates/cljx/: Cargo.toml
crates/cljx/src/: core.rs  environment.rs  float.rs  function.rs  handle.rs  keyword.rs  lib.rs  list.rs  map.rs  meta.rs  namespace.rs  optics.rs  prelude.rs  prism.rs  read.rs  read2.rs  set.rs  symbol.rs  value.rs  var.rs  vector.rs
crates/cljx/src/float/: add.rs  debug.rs  display.rs  div.rs  eq.rs  from.rs  mul.rs  product.rs  sub.rs  sum.rs
crates/cljx/src/handle/: buf_read_handle.rs  write_handle.rs
crates/cljx/src/keyword/: optics.rs
crates/cljx/src/list/: partials.rs
crates/cljx/src/symbol/: optics.rs
crates/cljx/src/value/: from.rs  optics.rs  partials.rs
crates/cljx/src/var/: optics.rs
crates/cljx/src/vector/: optics.rs  partials.rs
crates/cljx_cli/: Cargo.toml
crates/cljx_cli/src/: main.rs
crates/jinme/: Cargo.toml
crates/jinme/src/: core.rs  environment.rs  eval_context.rs  float.rs  function.rs  handle.rs  keyword.rs  lib.rs  list.rs  map.rs  meta.rs  namespace.rs  optics.rs  prelude.rs  prism.rs  read.rs  read2.rs  set.rs  symbol.rs  value.rs  var.rs  vector.rs
crates/jinme/src/float/: add.rs  debug.rs  display.rs  div.rs  eq.rs  from.rs  mul.rs  product.rs  sub.rs  sum.rs
crates/jinme/src/handle/: buf_read_handle.rs  write_handle.rs
crates/jinme/src/keyword/: optics.rs
crates/jinme/src/list/: optics.rs  partials.rs
crates/jinme/src/namespace/: optics.rs
crates/jinme/src/optics/: lens.rs  prism2.rs  prism3.rs
crates/jinme/src/symbol/: optics.rs
crates/jinme/src/value/: from.rs  optics.rs  partials.rs
crates/jinme/src/var/: optics.rs
crates/jinme/src/vector/: optics.rs  partials.rs
crates/jinme_cli/: Cargo.toml
crates/jinme_cli/examples/: stdin_test.rs
crates/jinme_cli/src/: main.rs
samples/: realish.cljx
src/: convert.rs  deps.rs  env.rs  keyword.rs  lib.rs  list.rs  macros.rs  main.rs  map.rs  namespace.rs  qualified_keyword.rs  qualified_symbol.rs  read.rs  rt.rs  set.rs  symbol.rs  unqualified_keyword.rs  unqualified_symbol.rs  utils.rs  value.rs  var.rs  vector.rs  with_eval.rs  without_eval.rs
src/cljx/: core.rs  user.rs
src/clojure/: core.rs  edn.rs
tests/: list_fn.rs  rest_fn.rs
tests/utils/: mod.rs
