[package]
name = "cljx"
version = "0.0.0"
edition = "2024"

[dependencies]
as-any = "0.3.2"
im = "15.1.0"
itertools = "0.14.0"
opentelemetry = "0.31.0"
opentelemetry-otlp = "0.31.0"
opentelemetry_sdk = "0.31.0"
tokio = "1.49.0"
tracing = "0.1.44"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = "0.3.22"
nom = "7.1.3"
